packages/jsts/tests/dbd/benchmark/TypeError/T14 X is not iterable/T14-01/fixed.js
const { WxCfg } = require('./fixed-dep2.js')
WxCfg.init({ dir: __dirname}).start()
